# StockMarketPredictions

./: .dockerignore  .env.example  .env.production.example  .env.staging.example  .gitignore  10X_STAND_TEST_README.md  ALGORITHMIC_TRADING_BUILD_SEQUENCE.md  ALGORITHMIC_TRADING_ROADMAP.md  CLEANUP_MANIFEST.md  CONTRIBUTING.md  CUSTOM_CHART_PASSES.md  CUSTOM_OWNERSHIP_STACK_PLAN.md  LICENSE  MARKET_STRUCTURE_PREDICTION_BUILD_SEQUENCE.md  MARKET_STRUCTURE_PREDICTION_ROADMAP.md  Makefile  README.md  REAL_MONEY_EXECUTION_ROADMAP.md  SECURITY.md  TRADING_SYSTEM_IMPLEMENTATION_BLUEPRINT.md  UI_ART_DIRECTION.md  alembic.ini  app.py  docker-compose.staging.yml  docker-compose.yml  pytest.ini
hft_system/: README.md  pyproject.toml
hft_system/configs/: fee_models.yaml  latency_profiles.yaml  millisecond.yaml  risk_limits.yaml  strategies.yaml  symbols.yaml
hft_system/hft/: __init__.py
hft_system/scripts/: watch-millisecond-engine.ps1
hft_system/tests/: __init__.py  _workspace_tmp.py  test_equity_replay.py  test_execution_simulator.py  test_import_isolation.py  test_inventory.py  test_latency_model.py  test_live_market_data_adapter.py  test_live_session_runner.py  test_millisecond_engine.py  test_millisecond_watchdog.py  test_optimization_calibration.py  test_optimization_search.py  test_order_book.py  test_paper_execution_adapter.py  test_replay_determinism.py  test_risk_checks.py  test_runtime_cli.py  test_strategy_market_making.py  test_walk_forward_splits.py
institutional_trading/: README.md  __init__.py  cli.py  interfaces.py  models.py  pyproject.toml
institutional_trading/accounts/: __init__.py  allocation.py  models.py  reconciliation.py
institutional_trading/audit/: __init__.py  logger.py  replay.py
institutional_trading/backtest/: __init__.py  engine.py  metrics.py
institutional_trading/config/: __init__.py  example.yaml  loader.py
(+727 files in other folders)
